# big_files

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  deploy.sh  docker-compose.yml  init.sql  nginx.conf  start.md
.claude/: settings.json
.github/workflows/: ci.yml
backend/: config.py  database.py  dependencies.py  init_db.py  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  chunk.py  file.py  user.py
backend/routes/: __init__.py  auth.py  files.py  upload.py
backend/services/: __init__.py  jwt_service.py  upload_service.py
backend/tests/integration/: test_upload_flow.py
backend/tests/unit/: test_api_endpoints.py  test_auth_routes.py  test_jwt_service.py  test_upload_routes.py  test_upload_service.py
chunks/: .gitkeep
docs/: AI驱动的全栈开发实践(1).pptx  AI驱动的大文件上传系统开发实践.pptx  代码审查报告-Code Review.md  项目实现流程总结.md
docs/superpowers/specs/: 2026-06-17-file-upload-design.md  2026-06-22-functional-review-design.md  2026-06-22-mvp-design.md  2026-06-22-mvp-implementation-plan.md  2026-06-22-technical-review-design.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: FileList.tsx  FileUpload.tsx  ProgressBar.tsx
frontend/public/: md5-worker.js
uploads/: .gitkeep
